--- a/LibraryManagement.Api/appsettings.json
+++ b/LibraryManagement.Api/appsettings.json
@@ -15,8 +15,8 @@
   },
   "JwtSettings": {
     "Key": "SECRET_JWT_KEY_HERE",
-    "Issuer": "HRLeavemanagement.Api",
-    "Audience": "HRLeavemanagementUser",
+    "Issuer": "LMLibraryanagement.Api",
+    "Audience": "LibraryManagementtUser",
     "DurationInMinutes": 60
   },
   "AllowedHosts": "*"
